--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,30 @@
-body {
-    background-color: cadetblue;
+/* Navbar */
+
+.navbar-brand {
+    position: relative;
 }
 
+#logo {
+    width: 50px;
+}
+
+#moviestar-title {
+    color: azure;
+    position: absolute;
+    bottom: -2px;
+    font-size: 30px;
+    left: 55px;
+    font-weight: bold;
+}
+
+#main-navbar {
+    background-color: #121212;
+}
+
+#search-form {
+    margin: 0 auto;
+    background-color: #ffff;
+    border-radius: 5px;
+    width: 50%;
+    margin-left: 180px;
+}
