--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,122 @@
     border-radius: 5px;
     width: 50%;
     margin-left: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    border: 1px solid #ccc;
+    padding: 5px;
+}
+
+#search-form .form-control {
+    border: none;
+    width: 80%;
+    box-shadow: none;
+}
+
+.my-sm-0 {
+    cursor: pointer;
+    position: relative; 
+    left: 0; 
+}
+
+
+#navbar {
+    min-width: 30%;
+}
+
+.navbar-nav {
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: #fff;
+    transform: .5s;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #999;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+}
+
+.msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 1px #000;
+    text-align: center;
+}
+
+.msg.error {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+
+.msg.success {
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #babdcc;
+}
+
+/* Home */
+
+#main-container {
+    background-color: #000;
+    color: #fff;
+    min-height: 65vh;
+    padding: 40px;
+}
+
+/* Footer */
+
+#footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+}
+
+#social-container ul, #footer-links-container ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#social-container li, #footer-links-container li {
+    display: inline-block;
+    margin: 0 20px;
+}
+
+#social-container li {
+    height: 40px;
+    width: 40px;
+    border-radius: 100%;
+    transition: .5s;
+    line-height: 3;
+}
+
+#social-container li:hover {
+    background-color: #333;
+}
+
+#social-container a, #footer-links-container a {
+    color: #FFF;
+}
+
+#social-container li i {
+    font-size: 25px;
+}
+
+#footer-links-container {
+    margin: 30px 0;
 }
