--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 
 #search-form .form-control {
     border: none;
-    width: 80%;
+    width: 90%;
     box-shadow: none;
 }
 
@@ -102,6 +102,41 @@
     min-height: 65vh;
     padding: 40px;
 }
+
+/* Login / Register */
+
+#auth-row {
+    justify-content: space-evenly;
+}
+
+#login-container h2, #register-container h2 {
+    text-align: center;
+    border-bottom: 2px solid #f5c518;
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+#login-container form, #register-container form {
+    max-width: 400px;
+    margin: 30px auto;
+}
+
+.card-btn {
+    color: #000;
+    background-color: #f5c518;
+    border: 2px solid #f5c518;
+    width: 100%;
+}
+
+.card-btn:hover {
+    background-color: transparent;
+    color: #f5c518;
+    border-color: #f5c518;
+}
+
+
+
 
 /* Footer */
 
